<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:checkableBehavior="single">
    <group>

        <!--<item-->
            <!--android:id="@+id/nav_theme"-->
            <!--android:icon="@drawable/nav_theme"-->
            <!--android:title="主题"/>-->

        <item
            android:id="@+id/nav_update"
            android:icon="@drawable/update_app"
            android:title="@string/update_app"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about_app"
            android:title="@string/about_app"/>
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/menu_setting"
            android:title="设置"/>

        <item
            android:id="@+id/nav_backup"
            android:icon="@drawable/nav_back"
            android:title="@string/back_up_app"/>
    </group>


</menu>
