<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/layout_margin60dp"
        android:layout_height="@dimen/layout_margin60dp"
        android:layout_margin="12dp"
        android:background="@drawable/logo_green_road"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/activity_about_version"/>

        <TextView
            android:id="@+id/activity_about_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/user_agreement"
        android:text="用户协议"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_margin40dp"/>

    <LinearLayout
        android:id="@+id/layout_activation_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/layout_margin10dp"
        android:paddingLeft="@dimen/layout_margin20dp"
        android:paddingRight="@dimen/layout_margin20dp"
        android:paddingBottom="@dimen/layout_margin10dp"
        android:paddingTop="@dimen/layout_margin10dp"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/activity_about_Activation_code"/>

        <TextView
            android:id="@+id/activity_about_activation_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <!--

        <TextView
            android:id="@+id/activity_about_user_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            />
    -->


    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginBottom="8dp"-->
    <!--android:gravity="center"-->
    <!--android:maxLines="1"-->
    <!--android:afterTextChanged="@string/company_name"/>-->


</LinearLayout>
